[MSS-1075] Fixed Arrows adjustment on mobile[MSS-1075] Fixed Arrows adjustment on mobile

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/_miniCart.scss
@@ -206,6 +206,7 @@
                                     font-weight: 400;
                                     text-indent: rem(15);
                                     margin-right: rem(20);
+                                    -moz-appearance: textfield;
 
                                     @include media-breakpoint-down(sm) {
                                         font-size: rem(16);
